Upgrade spring boot version and remove bad options for the VM running tests (which make them fail)