@@ -6,13 +6,13 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.6</version>
+		<version>2.6.12</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<groupId>fr.insee</groupId>
 	<artifactId>Pogues-BO</artifactId>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<version>4.0.4</version>
 	<name>Pogues-BO</name>
 
@@ -34,7 +34,7 @@
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
         <sonar.language>java</sonar.language>
         <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
-		<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea -Dfile.encoding=UTF-8</argLine>
+		<argLine>-Xms256m -Xmx512m -ea -Dfile.encoding=UTF-8</argLine>
 	</properties>
 
 	<dependencies>
